# Mage_of_Lamentus

./: .gitignore  README.md  add_card.bat  pyproject.toml  update_prices.bat
data/: cards_list.txt
src/: GSheetUpdater.py  card_adder.py  main.py  mtg_scraper_scryfall.py
